@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.36 2005/04/27 10:06:00 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.37 2005/04/27 13:29:32 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -148,6 +148,24 @@ PH/08 The redirect router has two new options, sieve_useraddress and
       :user. An unset subaddress is treated as an empty subaddress.
 
 PH/09 Quota values can be followed by G as well as K and M.
+
+PH/10 $message_linecount is a new variable that contains the total number of
+      lines in the header and body of the message. Compare $body_linecount,
+      which is the count for the body only. During the DATA and
+      content-scanning ACLs, $message_linecount contains the number of lines
+      received. Before delivery happens (that is, before filters, routers, and
+      transports run) the count is increased to include the Received: header
+      line that Exim standardly adds, and also any other header lines that are
+      added by ACLs. The blank line that separates the message header from the
+      body is not counted. Here is an example of the use of this variable in a
+      DATA ACL:
+
+        deny message   = Too many lines in message header
+             condition = \
+               ${if <{250}{${eval: $message_linecount - $body_linecount}}}
+
+      In the MAIL and RCPT ACLs, the value is zero because at that stage the
+      message has not yet been received.
 
 
 Version 4.50
